[tool.poetry]
name = "tpalchemy"
version = "0.1.0"
description = ""
authors = ["David Tacite <david.tacite@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.30"
faker = "^25.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
